add cmskit module;

--- a/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
+++ b/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
@@ -14,7 +14,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dotnet9.Blazor</title>
+    <title>Dotnet9</title>
     <base href="~/" />
     
     <abp-style-bundle name="@BlazorBasicThemeBundles.Styles.Global" />
