add about CRUD;

--- a/src/src/Dotnet9.Blazor/Pages/Admin/Tags.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Admin/Tags.razor
@@ -1,4 +1,4 @@
-﻿@page "/admin/Tags"
+﻿@page "/admin/tag"
 @using Dotnet9.Tags
 @using Dotnet9.Localization
 @using Volo.Abp.AspNetCore.Components.Web
