Separate UI and C# code;

--- a/src/src/Dotnet9.Blazor/Pages/Public/About.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/About.razor
@@ -1,16 +1,5 @@
-﻿@page "/public/about"
-@using Dotnet9.Abouts
-@inject IAboutAppService AboutAppService
-@_markdownHtml
+﻿@page "/about"
 
-@code{
-    private string _markdownHtml = string.Empty;
-
-    protected override void OnInitialized()
-    {
-        var about = AboutAppService.GetAsync().Result;
-        _markdownHtml = Markdig.Markdown.ToHtml(about.Details ?? string.Empty);
-        base.OnInitializedAsync();
-    }
-
-}
+<div>
+    @_markdownHtml
+</div>
