--- a/src/src/Dotnet9.Blazor/Pages/Admin/About.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Admin/About.razor
@@ -1,7 +1,10 @@
 ﻿@page "/admin/about"
 
 <Row>
-    <Column ColumnSize="ColumnSize.Is12">
+    <Column ColumnSize="ColumnSize.Is6">
         <Markdown Value="@_markdownValue" ValueChanged="@OnMarkdownValueChanged"/>
+    </Column>
+    <Column ColumnSize="ColumnSize.Is6">
+    @(new MarkupString(_markdownHtml))
     </Column>
 </Row>
