--- a/src/src/Dotnet9.Blazor/Pages/Public/WeChatOfficialAccount.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/WeChatOfficialAccount.razor
@@ -1,6 +1,6 @@
 ﻿<Card>
     <CardTitle>Dotnet9</CardTitle>
-    <CardImage Source="https://img1.dotnet9.com/wechatpublic.jpg" Alt="Dotnet9"></CardImage>
+    <CardImage Source="https://img1.dotnet9.com/wechatpublic.jpg" width="280" Alt="Dotnet9"></CardImage>
     <CardBody>
         <CardTitle Size="5">Code scanning attention</CardTitle>
         <CardText>
