--- a/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
@@ -4,24 +4,52 @@
 @using Volo.Abp.Application.Dtos
 @inject IBlogPostAppService _blogPostAppService
 
-<Alert Color="Color.Primary" Visible="true">
+<div class="whitebg bloglist">
     @if (_blogPostDtos is {Items: { } })
     {
         <ul>
             @foreach (var blogPostDto in _blogPostDtos.Items)
             {
-                <li>@blogPostDto.Title</li>
+                <li>
+                    <h3 class="blogtitle">
+                        <a href="/@blogPostDto.Slug" target="_blank">@blogPostDto.Title</a>
+                    </h3>
+                    <span class="blogpic imgscale">
+                        <i>
+                            <a href="/">WPF</a>
+                        </i>
+                        <a href="/@blogPostDto.Slug" title="@blogPostDto.Title">
+                            <img src="@blogPostDto.CoverImageUrl" alt="@blogPostDto.Title"/>
+                        </a>
+                    </span>
+                    <p class="blogtext">
+                        @blogPostDto.ShortDescription
+                    </p>
+                    <p class="bloginfo">
+                        <Icon Name="IconName.User"/>
+                        <span>Admin</span>
+                        <Icon Name="IconName.Clock"/>
+                        <small style="opacity: .65;">@blogPostDto.CreationTime.ToLocalTime()</small>
+                        <span>
+                            【
+                            <a href="/">最热</a>
+                            】
+                        </span>
+                    </p>
+                    <a href="/@blogPostDto.Slug" class="viewmore">阅读更多</a>
+                </li>
             }
         </ul>
     }
-</Alert>
+</div>
 
 @code {
+    private string Filter { get; set; }
     [CanBeNull] private PagedResultDto<BlogPostDto> _blogPostDtos;
 
     protected override async Task OnInitializedAsync()
     {
-        _blogPostDtos = await _blogPostAppService.GetListAsync(new GetBlogPostListDto());
+        _blogPostDtos = await _blogPostAppService.GetListAsync(new GetBlogPostListDto() { Sorting = nameof(BlogPostDto.CreationTime) });
     }
 
 }
