--- a/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
+++ b/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
@@ -18,6 +18,7 @@
     <base href="~/" />
     
     <abp-style-bundle name="@BlazorBasicThemeBundles.Styles.Global" />
+    <link href="_content/Blazorise.TreeView/blazorise.treeview.css" rel="stylesheet" />
     <link href="~/libs/easymde/dist/easymde.min.css" rel="stylesheet" />
     <script src="~/libs/easymde/dist/easymde.min.js"></script>
     <script src="~/libs/highlight.js/latest/highlight.min.js"></script>
