--- a/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/BlogPostList.razor
@@ -1,55 +1,79 @@
-﻿@using Dotnet9.Blogs
+﻿@page "/cat/{Category}/m"
+@using Dotnet9.Blogs
 @using Dotnet9.Categories
 @using JetBrains.Annotations
 @using Volo.Abp.Application.Dtos
+@using System.Net
 @inject IBlogPostAppService _blogPostAppService
 
-<div class="whitebg bloglist">
-    @if (_blogPostDtos is {Items: { } })
-    {
-        <ul>
-            @foreach (var blogPostDto in _blogPostDtos.Items)
+<Row>
+    <Column ColumnSize="ColumnSize.Is3">
+        <CategorySidebar/>
+    </Column>
+    <Column ColumnSize="ColumnSize.Is6">
+        <div class="whitebg bloglist">
+            @if (_blogPostDtos is {Items: { } })
             {
-                <li>
-                    <h3 class="blogtitle">
-                        <a href="/@blogPostDto.Slug" target="_blank">@blogPostDto.Title</a>
-                    </h3>
-                    <span class="blogpic imgscale">
-                        <i>
-                            <a href="/">WPF</a>
-                        </i>
-                        <a href="/@blogPostDto.Slug" title="@blogPostDto.Title">
-                            <img src="@blogPostDto.CoverImageUrl" alt="@blogPostDto.Title"/>
-                        </a>
-                    </span>
-                    <p class="blogtext">
-                        @blogPostDto.ShortDescription
-                    </p>
-                    <p class="bloginfo">
-                        <Icon Name="IconName.User"/>
-                        <span>Admin</span>
-                        <Icon Name="IconName.Clock"/>
-                        <small style="opacity: .65;">@blogPostDto.CreationTime.ToLocalTime()</small>
-                        <span>
-                            【
-                            <a href="/">最热</a>
-                            】
-                        </span>
-                    </p>
-                    <a href="/@blogPostDto.Slug" class="viewmore">阅读更多</a>
-                </li>
+                <ul>
+                    @foreach (var blogPostDto in _blogPostDtos.Items)
+                    {
+                        <li>
+                            <h3 class="blogtitle">
+                                <a href="/@blogPostDto.Slug" target="_blank">@blogPostDto.Title</a>
+                            </h3>
+                            <span class="blogpic imgscale">
+                                <i>
+                                    <a href="/">WPF</a>
+                                </i>
+                                <a href="/@blogPostDto.Slug" title="@blogPostDto.Title">
+                                    <img src="@blogPostDto.CoverImageUrl" alt="@blogPostDto.Title"/>
+                                </a>
+                            </span>
+                            <p class="blogtext">
+                                @blogPostDto.ShortDescription
+                            </p>
+                            <p class="bloginfo">
+                                <Icon Name="IconName.User"/>
+                                <span>Admin</span>
+                                <Icon Name="IconName.Clock"/>
+                                <small style="opacity: .65;">@blogPostDto.CreationTime.ToLocalTime()</small>
+                                <span>
+                                    【
+                                    <a href="/">最热</a>
+                                    】
+                                </span>
+                            </p>
+                            <a href="/@blogPostDto.Slug" class="viewmore">阅读更多</a>
+                        </li>
+                    }
+                </ul>
             }
-        </ul>
-    }
-</div>
+        </div>
+    </Column>
+    <Column ColumnSize="ColumnSize.Is3">
+        <HomeRightSidebar/>
+    </Column>
+</Row>
+<Row>
+    <Column ColumnSize="ColumnSize.Is12">
+        <Footer/>
+    </Column>
+</Row>
 
 @code {
     private string Filter { get; set; }
+
+    [CanBeNull]
+    [Parameter]
+    public string Category { get; set; }
+
     [CanBeNull] private PagedResultDto<BlogPostDto> _blogPostDtos;
+
 
     protected override async Task OnInitializedAsync()
     {
-        _blogPostDtos = await _blogPostAppService.GetListAsync(new GetBlogPostListDto() { Sorting = nameof(BlogPostDto.CreationTime) });
+        var key = Category == null ? "" : System.Web.HttpUtility.UrlDecode(Category).ToLower();
+        _blogPostDtos = await _blogPostAppService.GetListAsync(new GetBlogPostListDto() { Category = key, Sorting = nameof(BlogPostDto.CreationTime) });
     }
 
 }
