--- a/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
+++ b/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
@@ -12,31 +12,46 @@
 <!DOCTYPE html>
 <html lang="@CultureInfo.CurrentCulture.Name" dir="@rtl">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dotnet9.Blazor</title>
-    <base href="~/" />
-    
-    <abp-style-bundle name="@BlazorBasicThemeBundles.Styles.Global" />
-    <link href="_content/Blazorise.TreeView/blazorise.treeview.css" rel="stylesheet" />
-    <link href="~/libs/easymde/dist/easymde.min.css" rel="stylesheet" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Dotnet9</title>
+    <base href="~/"/>
+
+    <abp-style-bundle name="@BlazorBasicThemeBundles.Styles.Global"/>
+    <link href="_content/Blazorise.TreeView/blazorise.treeview.css" rel="stylesheet"/>
+    <link href="~/libs/easymde/dist/easymde.min.css" rel="stylesheet"/>
     <script src="~/libs/easymde/dist/easymde.min.js"></script>
     <script src="~/libs/highlight.js/latest/highlight.min.js"></script>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?b1c5c62f256893710ae912468261bf6b";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
+            crossorigin="anonymous"></script>
+
 </head>
 <body class="abp-application-layout bg-light @rtl">
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+<component type="typeof(App)" render-mode="Server"/>
 
-    <div id="blazor-error-ui">
-        <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
-        </environment>
-        <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
-        </environment>
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
+<div id="blazor-error-ui">
+    <environment include="Staging,Production">
+        An error has occurred. This application may no longer respond until reloaded.
+    </environment>
+    <environment include="Development">
+        An unhandled exception has occurred. See browser dev tools for details.
+    </environment>
+    <a href="" class="reload">Reload</a>
+    <a class="dismiss">🗙</a>
+</div>
 
-    <abp-script-bundle name="@BlazorBasicThemeBundles.Scripts.Global" />
+<abp-script-bundle name="@BlazorBasicThemeBundles.Scripts.Global"/>
 </body>
 </html>
+<div style="text-align: center">
+    <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1278208054'%3E%3C/span%3E%3Cscript src='https://v1.cnzz.com/z_stat.php%3Fid%3D1278208054%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+</div>
