--- a/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
+++ b/src/src/Dotnet9.Blazor/Pages/_Host.cshtml
@@ -36,7 +36,7 @@
 
 </head>
 <body class="abp-application-layout bg-light @rtl">
-<component type="typeof(App)" render-mode="Server"/>
+<component type="typeof(App)" render-mode="ServerPrerendered"/>
 
 <div id="blazor-error-ui">
     <environment include="Staging,Production">
