--- a/src/src/Dotnet9.Blazor/Pages/Public/WeChatOfficialAccount.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/WeChatOfficialAccount.razor
@@ -1,4 +1,4 @@
-﻿<Card>
+﻿<Card Margin="Margin.Is2" Padding="Padding.Is2">
     <CardTitle>Dotnet9</CardTitle>
     <CardImage Source="https://img1.dotnet9.com/wechatpublic.jpg" width="280" Alt="Dotnet9"></CardImage>
     <CardBody>
@@ -6,5 +6,12 @@
         <CardText>
             A focus Official account shared by NET software technology
         </CardText>
+    </CardBody>
+</Card>
+<Card Margin="Margin.Is2" Padding="Padding.Is2">
+    <CardTitle>QQ Group</CardTitle>
+    <CardImage Source="https://img1.dotnet9.com/qqgoup1.png" width="280" Alt="Dotnet9"></CardImage>
+    <CardBody>
+        <CardTitle Size="5">Code scanning attention</CardTitle>
     </CardBody>
 </Card>
