add category count;

--- a/src/src/Dotnet9.Blazor/Pages/Public/CategorySidebar.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/CategorySidebar.razor
@@ -7,6 +7,8 @@
               HasChildNodes="@(item => item.Children?.Any() == true)"
               @bind-SelectedNode="@SelectedItem"
               @bind-ExpandedNodes="_expandedNodes">
-        <NodeContent>@context.Text</NodeContent>
+        <NodeContent>
+            @context.Text<span>(</span>@context.Count<span>)</span>
+        </NodeContent>
     </TreeView>
 </Card>
